experiement_output/error_log/nondex-honourednihilist-gradle-postgresql-embedded-example.log
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task323/wd/NonDex-plugin-test/github.com/honourednihilist/gradle-postgresql-embedded-example/src/main/java/com/github/honourednihilist/gradle/postgresql/embedded/example/BookmarkRepositoryImpl.java:20: error: cannot find symbol
		if (bookmark.getId() > 0) {
		            ^
  symbol:   method getId()
  location: variable bookmark of type S
  where S is a type-variable:
    S extends Bookmark declared in method <S>save(S)
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task323/wd/NonDex-plugin-test/github.com/honourednihilist/gradle-postgresql-embedded-example/src/main/java/com/github/honourednihilist/gradle/postgresql/embedded/example/BookmarkRepositoryImpl.java:67: error: cannot find symbol
		delete(bookmark.getId());
		               ^
  symbol:   method getId()
  location: variable bookmark of type Bookmark
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task323/wd/NonDex-plugin-test/github.com/honourednihilist/gradle-postgresql-embedded-example/src/main/java/com/github/honourednihilist/gradle/postgresql/embedded/example/BookmarkRestController.java:34: error: cannot find symbol
		return bookmarkRepository.save(new Bookmark(input.getUri(), input.getDescription()));
		                                                 ^
  symbol:   method getUri()
  location: variable input of type Bookmark
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task323/wd/NonDex-plugin-test/github.com/honourednihilist/gradle-postgresql-embedded-example/src/main/java/com/github/honourednihilist/gradle/postgresql/embedded/example/BookmarkRestController.java:34: error: cannot find symbol
		return bookmarkRepository.save(new Bookmark(input.getUri(), input.getDescription()));
		                                                                 ^
  symbol:   method getDescription()
  location: variable input of type Bookmark
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task323/wd/NonDex-plugin-test/github.com/honourednihilist/gradle-postgresql-embedded-example/src/main/java/com/github/honourednihilist/gradle/postgresql/embedded/example/BookmarkRestController.java:40: error: cannot find symbol
		bookmark.setUri(input.getUri());
		                     ^
  symbol:   method getUri()
  location: variable input of type Bookmark
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task323/wd/NonDex-plugin-test/github.com/honourednihilist/gradle-postgresql-embedded-example/src/main/java/com/github/honourednihilist/gradle/postgresql/embedded/example/BookmarkRestController.java:41: error: cannot find symbol
		bookmark.setDescription(input.getDescription());
		                             ^
  symbol:   method getDescription()
  location: variable input of type Bookmark
6 errors

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileJava'.
> Compilation failed; see the compiler error output for details.

* Try:
Run with --stacktrace option to get the stack trace. Run with --info or --debug option to get more log output. Run with --scan to get full insights.

* Get more help at https://help.gradle.org

BUILD FAILED in 7s
